manifests/ingress/poc-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: uet-app-distributor
spec:
  rules:
    - http:
        paths:
          - path: /poc-ingress
            pathType: Prefix
            backend:
              service:
                name: poc-nginx-service
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: poc-nginx-service
  name: poc-nginx-service
  namespace: uet-app-distributor
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: poc-nginx
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: poc-nginx
  name: poc-nginx
  namespace: uet-app-distributor
spec:
  replicas: 3
  selector:
    matchLabels:
      app: poc-nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: poc-nginx
    spec:
      containers:
        - image: nginx:1.22
          name: nginx
          resources: {}
status: {}
